xx May 2006: 0.2.9 Miek <miek@miek.nl>
  -- ?? --
   * gzip.sh, crypt.sh: ignore '-c' option
   * monthday.sh: implement -c option 
     script has completely been rewritten
   * monthday.sh: also process the last file
   * removed grep.sh from rdup-utils
   * tests: added monthday +0 restore test

22 Apr 2006: 0.2.8 Miek <miek@miek.nl>
   -- bugfixes --
   * scripts: support -V (version) in all scripts
   * scripts: print "invalid option" when encountered to stderr
   * scripts: disable 'set -o nounset' as it clashes with getopt
   * scripts: use read -r to allow for backslashes in filenames
   * gzip.sh, crypt.sh: fix a bug in new size calculation 
     (reported by Erland Isaksson)
   * mirror.sh: with -c, don't print "**" twice
   * mirror.sh: use cp, not cat for moving file locally
   * rorrim.sh: use cp, not cat for moving file locally
   * hist.sh, yesterday.sh: fix unbound vars
   * hist.sh: implemented -z and -k 
   * tests: better test for running all rdup-utils
   * tests: added gzip.sh test
   * tests: added crypt.sh test
   * tests: added run restore scripts test
   * Ruby impl. of mirror.sh: mirror.rb (proof of concept)
   

11 Apr 2006: 0.2.7 Miek <miek@miek.nl>
   -- bugfixes + restore features --
   * rdup: re-touch the timestamp file at the end. This way an interupted
     backup can be re-run because all the rdup files are still untouched.
   * rdup: really give an error on non-supported files
   * doc: update mirror.sh manpage: removed -z -k from the manual
   * doc: added gzip.sh, rorrim.sh and grep.sh manpage
   * yesterday.sh: work correctly with directories
   * yesterday.sh: replace backup directory with ...
   * hist.sh: print "d " for directories and replace the backup dir with ... 
   * gzip.sh: accept -d option: decompress
   * crypt.sh: accept -d option: decrypt
   * grep.sh: match files,links/directories. Install it by default
   Source dir layout:
   * rename tools -> sh-tools, there is room for scripts in other languages