@@ -9,9 +9,6 @@ o make complete hdup2 clone based on rdup
   see hdup2 directory
   I want to see this, but I don't have enough time for this.
 
-:0.2.9:
-o monthday -c/monthday tweaks
-
 :rdup utils: 
 o better error messages if somebody forgets a -c or something
 
@@ -20,6 +17,8 @@ o better error messages if somebody forgets a -c or something
 :doc:
 
 :scripts:
+merging rorrim.sh and mirror.sh because they really really do
+the same thing
 
 :porting:
 
@@ -32,7 +31,7 @@ o add -c to gzip/crypt
 o dump.sh add -z and -k
   23 Apr 2006: done
 
-o monthday -c support
+o monthday -c support + completely rewritten
   23 Apr 2006: done
 
 o -z for unzip in hist.sh, yesterday.sh
