@@ -1,9 +1,12 @@
 xx May 2006: 0.2.9 Miek <miek@miek.nl>
   -- ?? --
    * gzip.sh, crypt.sh: ignore '-c' option
+   * crypt.sh: use mcrypt -q
    * monthday.sh: implement -c option 
      script has completely been rewritten
    * monthday.sh: also process the last file
+   * rorrim.sh: -c (remote) fixes and other tweaks
+   * dump.sh: support -z (compress) and -k (encrypt) options
    * removed grep.sh from rdup-utils
    * tests: added monthday +0 restore test
 
